[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/fonts/winner.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ScoreBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Graphics.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Graphics" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 858, 525 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StripesContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -2.5
margin_right = 0.5
margin_bottom = 525.0
rect_min_size = Vector2( 3, 525 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" parent="Margin" instance=ExtResource( 2 )]

[node name="EndGame" type="VBoxContainer" parent="Margin"]
margin_left = 229.0
margin_top = 162.0
margin_right = 629.0
margin_bottom = 362.0
rect_min_size = Vector2( 400, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Winner" type="Label" parent="Margin/EndGame"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 1 )
text = "Player 1 wins"
align = 1
valign = 1

[node name="Button" type="Button" parent="Margin/EndGame"]
margin_left = 60.0
margin_top = 112.0
margin_right = 340.0
margin_bottom = 192.0
rect_min_size = Vector2( 280, 80 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
text = "Play Again"

[connection signal="button_up" from="Margin/EndGame/Button" to="." method="_on_Button_button_up"]
